--- a/zhongyuan/css/base.css
+++ b/zhongyuan/css/base.css
@@ -19,6 +19,7 @@ body {
 	padding: 0;
 	margin: auto;
 	width: 980px;
+	height: 1050px;
 	background: url(../images/1.png) no-repeat center;
 }
 /*去掉所有ul的margin和padding*/
@@ -108,6 +109,24 @@ i {
 /*顶部导航栏结束*/
 /*顶部样式结束*/
 /*底部样式开始*/
-
-
+.foot {
+	height: 110px;
+	padding: 0 10px 10px 10px;
+	margin: 0 auto;
+	text-align: center;
+	background: url(../images/1.png) no-repeat center
+}
+.foot div {
+	
+	background-color: #303338;
+	height: 30px;
+	padding: 40px;
+}
+.foot p {
+	font-size: 14px;
+	
+    height: 20px;
+	color: #fff;
+	margin: 0;
+}
 /*底部样式结束*/
